Revert "Update 2016-08-22-tom-bull.md"

--- a/_posts/blog/2016-08-22-tom-bull.md
+++ b/_posts/blog/2016-08-22-tom-bull.md
@@ -1,11 +1,12 @@
 ---
 layout: post
-title: "Tom Bull feat. Bianca - Take It All"
+title: "Tom Bull feat. Bianca 
+- Take It All"
 modified:
 categories: blog
-excerpt: "UK house DJ/Producer Tom Bull has been on the come up this past year, remixing for the likes of Jaymes Young, Nadia Gattas, SoulCircuit and Ayah Marar, featured on the Calvin Harris single “Thinking About You”"
+excerpt:
 tags: []
-image: tom-bull.jpg
+image:
   feature:
 date: 2016-08-22T08:08:50-04:00
 ---
