--- a/_posts/blog/2016-08-23-odd-mob.md
+++ b/_posts/blog/2016-08-23-odd-mob.md
@@ -12,3 +12,14 @@ date: 2016-08-23T08:08:50-04:00
 <iframe width="100%" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/257563639&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
 
 Robbie Jacobs & Harry Hope make up the Australian DJ/Producer duo, Odd Mob. The Brisbane pair have been creating a lot of noise for themselves since releasing their huge single, "Is It A Banger".
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-83030962-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
